tests/tests/Other_tests/tests-Init-21-Functions-21-11_Functions_CallingAnIntFucntionBeforeDeclaration/pld-compile.txt
Error in input.c.
Error function aFunction undefined. On position 4:5
   "	a = aFunction();"
         ^

1 error generated.

return code: 1
